# columbia-masters

./: .gitignore  CLAUDE.md  README.md  SCRAPER.md  pyproject.toml
.github/workflows/: deploy.yml
data/csv/: COLM_lcm_2015_records.csv  COLM_lcm_2016_records.csv  COLM_lcm_2024_records.csv  COLM_lcm_2025_records.csv  COLM_scm_2015_records.csv  COLM_scm_2016_records.csv  COLM_scm_2017_records.csv  COLM_scm_2018_records.csv  COLM_scm_2020_records.csv  COLM_scm_2023_records.csv  COLM_scm_2024_records.csv  COLM_scm_2025_records.csv  COLM_scy_2015_records.csv  COLM_scy_2016_records.csv  COLM_scy_2017_records.csv  COLM_scy_2018_records.csv  COLM_scy_2020_records.csv  COLM_scy_2021_records.csv  COLM_scy_2024_records.csv  COLM_scy_2025_records.csv  COLM_scy_2026_records.csv
data/json/: COLM_all_records.json  COLM_firebase_import.json  COLM_lcm_2015_records.json  COLM_lcm_2016_records.json  COLM_lcm_2024_records.json  COLM_lcm_2025_records.json  COLM_scm_2015_records.json  COLM_scm_2016_records.json  COLM_scm_2017_records.json  COLM_scm_2018_records.json  COLM_scm_2020_records.json  COLM_scm_2023_records.json  COLM_scm_2024_records.json  COLM_scm_2025_records.json  COLM_scy_2015_records.json  COLM_scy_2016_records.json  COLM_scy_2017_records.json  COLM_scy_2018_records.json  COLM_scy_2020_records.json  COLM_scy_2021_records.json  COLM_scy_2024_records.json  COLM_scy_2025_records.json  COLM_scy_2026_records.json
src/usms_scraper/: __init__.py  cli.py  gallery.py  locations.py  models.py  scraper.py  (+1 more)
web/: CNAME  index.html  package-lock.json  package.json  vite.config.ts
(+49 files in other folders)
